--- a/ARIMA.ipynb
+++ b/ARIMA.ipynb
@@ -5047,7 +5047,7 @@
    "id": "d458246f",
    "metadata": {},
    "source": [
-    "La base de datos tiene alguno datos faltantes por lo tanto primero es necesario realizar una interpolación"
+    "La base de datos omite algunos datos, por lo tanto primero es necesario realizar una interpolación e incluir las fechas faltantes"
    ]
   },
   {
@@ -5095,6 +5095,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Se pasan las fechas al formato datetime y las tasas a float",
     "data = df_fusionado\n",
     "data['Date']=pd.to_datetime(data['Date'])\n",
     "data.set_index('Date', inplace=True)\n",
@@ -5368,6 +5369,7 @@
     }
    ],
    "source": [
+    "# Se realiza la prediccion con la funcion predict( )"
     "prediction1 = pd.DataFrame(arima_model1.predict(n_periods=15), index=test.index)\n",
     "prediction1.columns = ['predicted_rate']\n",
     "prediction1"
